--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .wrapper {
-	width: 960px;
+	max-width: 1160px;
 }
 
 /* Header Styles */
@@ -10,12 +10,12 @@
 
 .name {
 	float: left;
-	width: 200px;
+	width: 25%;
 	background-color: #4aaaa5;
 	padding: 20px;
 	text-align: center;
 	position: relative;
-	left: 50px;
+	left: 5%;
 }
 
 h1 {
@@ -30,15 +30,16 @@ nav {
 	float: left;
 	display: block;
 	position: relative;
-	left: 525px;
-	padding: 20px;
+	left: 50%;
+	padding: 2%;
+	width: 33%;
 
 }
 
 li {
 	display: inline;
 	font-size: 20px;
-	margin: 0 5px;
+	margin: 0 1%;
 	color: #777;
 }
 
@@ -63,17 +64,17 @@ h1 a {
 .main_content { /* Accounts for index, contact, and portfolio page main content area */
 	border-top: 2px #ccc solid;
 	background-image: url("../images/seigaiha.png");
-	width: 100%;
+	width: 90%;
 	float: left;
-	padding: 50px 100px;
+	padding: 5% 10%;
 }
 
 .about {
 	background-color: #fff;
-	width: 60%;
-	padding: 25px;
+	width: 55%;
+	padding: 5%;
 	float: left;
-	margin-right: 20px;
+	margin-right: 1%;
 	border: 1px solid #ddd;
 	border-radius: 2px; /* I hate sharp edges :D */
 }
@@ -84,66 +85,66 @@ h2 {
 	color: #4aaaa5;
 	font-weight: bold;
 	font-family: "Georgia", Times, Times New Roman, serif;
-	padding: 25px 25px 25px 0;
+	padding: 2.5% 2.5% 2.5% 0;
 	border-bottom: 2px solid #ddd;
 }
 
 .me_photo {
-	width: 225px;
+	width: 33%;
 	height: 200px;
 	float: left;
 	display: block;
-	margin-top: 20px;
-	margin-right: 20px;
-	margin-bottom: 5px
+	margin-top: 2%;
+	margin-right: 2%;
+	margin-bottom: 1%;
 }
 
 p {
 	font-size: 16px;
 	 font-family: sans-serif;
-	 padding: 10px 10px;
+	 padding: 1% 1%;
 	 font-family: "Arial", "Helvetica Neue", "Helvetica", sans-serif;
 	 line-height: 120%;
 	 color: #777;
 }
 
 .connect {
-	width: 245px;
+	width: 25%;
 	float: left;
 	background-color: #fff;
-	padding: 25px;
-	margin-left: 10px;
+	padding: 3%;
+	margin-left: 1%;
 	border: 1px solid #ddd;
 	border-radius: 2px;
 }
 
-.social_icons {
-	/*margin-left: 25px;*/
-}
-
 .social {
 	height: 75px;
-	width: 75px;
+	width: 27%;
 	margin-top: 20px;
+	padding: 1%;
 }
 
 /* Footer Styles */
 
 footer {
 	clear: both;
+	width: 100%;
 }
 
 .liner {
 	background-color: #4aaaa5;
 	height: 5px;
-	width: 1160px; /* needed to adjust width to account for padding */
+	width: 100%;
+	padding: .5% 10%;
 }
 
 .copyright{
 	background-color: #666666;
 	color: white;
 	text-align: center;
-	width: 1160px; /* needed to adjust width to account for padding */
+	width: 100%; 
+	padding: 1% 10%;
 }
 
 .copyright p {
@@ -157,15 +158,15 @@ footer {
 	background-color: #fff;
 	width: 60%;
 	float: left;
-	padding: 25px;
+	padding: 2.5%;
 	border-radius: 2px;
-	margin-right: 20px;
+	margin-right: 2%;
 	border: 1px solid #ddd;
 }
 
 input, textarea {
-	padding: 5px;
-	margin: 5px;
+	padding: .5%;
+	margin: .5%;
 }
 
 textarea {
@@ -177,7 +178,7 @@ textarea {
 	font-family: "Arial", "Helvetica Neue", "Helvetica", sans-serif;
 	padding: 0px;
 	line-height: 100%;
-	margin-top: 10px;
+	margin-top: 1%;
 }
 
 .input {
@@ -203,11 +204,11 @@ textarea {
 
 .portfolio_image {
 	float: left;
-	padding: 15px 0px;
+	padding: 1.5% 0px;
 }
 
 .portfolio_image:nth-child(odd) { 
-	padding-left: 60px
+	padding-left: 3.5%
 }
 
 
@@ -220,7 +221,7 @@ textarea {
 	background-color: #4aaaa5;
 	color: white;
 	text-align: center;
-	padding: 10px 25px;
+	padding: 1% 2.5%;
 	position: relative;
 	bottom: 50px;
 }
@@ -230,7 +231,197 @@ textarea {
 	float: left;
 	background-color: #fff;
 	margin-right: 20px;
-	padding: 25px;
+	padding: 2%;
 	border: 1px solid #ddd;
 	border-radius: 2px;
+}
+
+@media screen and (max-width: 980px) {
+	/* Home/General Adjustments */
+
+
+	.me_photo {
+		float: none;
+		margin: 1% auto;
+		height: 175px;
+		width: 45%;
+	}
+
+	.about {
+		width: 45%;
+	}
+
+	.connect {
+		width: 33%; /* Icons look better at wider width when in this media query range */
+	}
+
+	nav {
+		left: 37.5%; /* Relative Positioning Adjustment */
+	}
+
+	/* Portfolio Adjustments */
+	.portfolio_image {
+		float: none;
+		margin-right: 0;
+	}
+
+	.portfolio_image:nth-child(odd) {
+		padding: 0;
+	}
+
+	.portfolio_image h3 {
+		padding: 2.5% 0;
+		bottom: 40px;
+	}
+
+	.portfolio {
+		width: 33%;
+	}
+
+	.portfolio_image img {
+		width: 100%; 
+	}
+
+	.contact_form {
+		width: 33%;
+	}
+
+	form {
+		width: 100%;
+	}
+
+	.input {
+		width: 100%;
+	}
+
+	.social {
+		width: 30%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	/* Home and General */
+
+	.me_photo {
+		float: left;
+		width: 30%;
+		margin-right: 2%;
+	}
+
+	.about {
+		width: 75%;
+	}
+
+	.connect {
+		width: 80%;
+		margin-top: 2%;
+		margin-left: 0;
+		margin-right:0;
+		padding-right: 7%;
+	}
+
+	.social {
+		width: 65px
+	}
+
+	nav {
+		left: 25%; /* Relative Positioning Adjustment */
+	}
+
+	.portfolio_image {
+	float: left;
+	padding: 1.5% 0px;
+	width: 45%;
+}
+
+	.portfolio_image:nth-child(odd) { 
+	padding-left: 5%;
+	padding: 1.5% 5%;
+
+}
+	.portfolio {
+		width: 80%;
+	}
+
+	.connect {
+		padding-right: 2.3%;
+	}
+
+	.contact_form {
+		width: 80%;
+	}
+}
+
+@media screen and (max-width: 640px) {
+
+	.me_photo {
+		float: none;
+		margin: 2% auto;
+		height: 175px;
+		width: 50%;
+	}
+
+	.about {
+		width: 85%;
+	}
+	.name {
+		width: 100%;
+		position: static;
+	}
+	nav {
+		position: static;
+		clear: both;
+		width: 100%;
+		margin: 1% 12%;
+	}
+
+	.connect {
+		width: 90%; /*Looks better at smallest width */
+	}
+
+	#line {
+		display: none; /* Small hack to fix my non border implementation of the lines on the nav */
+	}
+
+	nav li {
+		padding: 0 7%; /* Semi arbitrary implementation, but looks nice at small widths */
+	}
+
+	/* Portfolio Adjustments */
+	.portfolio_image {
+		float: none;
+		margin: 0px auto;
+
+	}
+
+	.portfolio_image:nth-child(odd) { /*I am now regretting using the nth-child implementation for the smaller widths */
+		padding: 0;
+	}
+
+	.portfolio_image h3 {
+		padding: 2.5% 0;
+		bottom: 40px;
+		width: 100%;
+	}
+
+	.portfolio {
+		width: 90%;
+	}
+
+	.portfolio_image img {
+		width: 100%; 
+		margin-right: 0px;
+	}
+
+	.contact_form {
+		width: 90%;
+	}
+
+	form {
+		width: 100%;
+	}
+
+	.input {
+		width: 100%;
+	}
 }
